grade-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grade-submission-api
  namespace: grade-demo
  labels:
    app: grade-submission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grade-submission
  template:
    metadata:
      labels:
        app: grade-submission
    spec:
      containers:
      - name: grade-api
        image: rslim087/kubernetes-course-grade-submission-api:stateless
        ports:
          - containerPort: 3000
