grade-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-service-api
  namespace: grade-demo
spec:
  selector:
    app: grade-submission
  ports:
    - port: 3000
      targetPort: 3000
